<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:id="@+id/button_hobbies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_hobbies"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_contact"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/button_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_contact"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_hobbies"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textview_biography"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_biography"
                android:lineSpacingExtra="4dp"
                android:justificationMode="inter_word"
                app:layout_constraintTop_toBottomOf="@id/button_hobbies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:padding="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
